Fix tooltip sometimes covering parts of the UI

--- a/templates/tapestry.css
+++ b/templates/tapestry.css
@@ -371,7 +371,6 @@ input[type="checkbox"][disabled] {
 }
 
 .tapestry-tooltip-content {
-    pointer-events: none;
     background: black;
     color: white;
     padding: 12px 16px;
@@ -380,6 +379,10 @@ input[type="checkbox"][disabled] {
     font-size: 22px;
     width: 100%;
     bottom: 8px;
+}
+
+.tooltip-wrapper {
+    display: none;
 }
 
 .tapestry-tooltip ul {
